@@ -5,12 +5,14 @@ import com.laoBackend.gestionaire_de_biblioteque.domain.Enum.Role;
 import com.laoBackend.gestionaire_de_biblioteque.domain.Member;
 import com.laoBackend.gestionaire_de_biblioteque.dto.book.BookCreationDTO;
 import com.laoBackend.gestionaire_de_biblioteque.dto.book.BookDTO;
-import com.laoBackend.gestionaire_de_biblioteque.dto.member.MemberCreationDTO;
-import com.laoBackend.gestionaire_de_biblioteque.dto.member.MemberDTO;
 import com.laoBackend.gestionaire_de_biblioteque.mapper.book.BookCreationMapper;
 import com.laoBackend.gestionaire_de_biblioteque.mapper.book.BookMapper;
 import com.laoBackend.gestionaire_de_biblioteque.repository.BookRepository;
 import com.laoBackend.gestionaire_de_biblioteque.repository.MemberRepository;
+import com.laoBackend.gestionaire_de_biblioteque.testBuilders.BookBuilder;
+import com.laoBackend.gestionaire_de_biblioteque.testBuilders.BookCreationBuilder;
+import com.laoBackend.gestionaire_de_biblioteque.testBuilders.BookDTOBuilder;
+import com.laoBackend.gestionaire_de_biblioteque.testBuilders.MemberBuilder;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -21,9 +23,9 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -33,72 +35,50 @@ class BookServiceTest {
     @Mock
     BookRepository bookRepository;
     @Mock
-    BookCreationMapper bookCreationMapper;
+     BookCreationMapper bookCreationMapper;
     @Mock
     BookMapper bookMapper;
 
     @InjectMocks
     BookService bookService;
 
+    BookBuilder bookBuilder = new BookBuilder();
+    BookCreationBuilder bookCreationBuilder = new BookCreationBuilder();
+    BookDTOBuilder bookDTOBuilder = new BookDTOBuilder();
+    MemberBuilder memberBuilder = new MemberBuilder();
+
     @Test
     void createBook() {
-        Book book =new Book(
-                1L,
-                "title",
-                "author",
-                "publisher",
-                2023,
-                10,
-                20
-        );
-        BookCreationDTO bookCreationDTO = new BookCreationDTO(
-                "title",
-                "author",
-                "publisher",
-                2023,
-                "genre",
-                "1234567890123L",
-                10,
-                20
-        );
-
-        BookDTO bookDTO = new BookDTO(
-                "title",
-                "author",
-                "publisher",
-                2023,
-                "genre",
-                "1234567890123L",
-                10
-        );
-        Member member = new Member(
-                1L,
-                "john",
-                "john@email.com",
-                "logbesou",
-                LocalDateTime.now(),
-                null,
-                Role.LIBRARIAN
-        );
+        Book book = bookBuilder.build();
+        BookCreationDTO bookCreationDTO = bookCreationBuilder.build();
+        BookDTO bookDTO = bookDTOBuilder.build();
+        Member member = memberBuilder.withRole(Role.LIBRARIAN).build();
 
         when(bookRepository.existsByTitleAndAuthorAndPublisher(
-                bookCreationDTO.getBookTitle(),
-                bookCreationDTO.getBookAuthor(),
+                bookCreationDTO.getTitle(),
+                bookCreationDTO.getAuthor(),
                 bookCreationDTO.getPublisher())).thenReturn(false);
-        when(memberRepository.findById(any(Long.class))).thenReturn(Optional.of(member));
+        when(memberRepository.findById(anyLong())).thenReturn(Optional.of(member));
         when(bookCreationMapper.toEntity(bookCreationDTO)).thenReturn(book);
         book.setCreatedOn(LocalDateTime.of(2025,2,5,10,23));
         when(bookRepository.save(any(Book.class))).thenReturn(book);
-        when(bookMapper.toDto(book)).thenReturn(bookDTO);
+        when(bookMapper.toDto(any(Book.class))).thenReturn(bookDTO);
 
         BookDTO result = bookService.createBook(bookCreationDTO,1L);
 
         assertEquals(bookDTO.getTitle(), result.getTitle());
+        assertEquals(bookDTO.getAuthor(), result.getAuthor());
+        assertEquals(bookDTO.getDescription(), result.getDescription());
+        assertEquals(bookDTO.getGenre(), result.getGenre());
+        assertEquals(bookDTO.getPublisher(), result.getPublisher());
+        assertEquals(bookDTO.getAvailableCopies(), result.getAvailableCopies());
+        assertEquals(bookDTO.getYearPublished(), result.getYearPublished());
+        assertThat(result).isEqualTo(bookDTO);
 
-        verify(bookRepository).existsByTitleAndAuthorAndPublisher(bookCreationDTO.getBookTitle(),
-                bookCreationDTO.getBookAuthor(),
+        verify(bookRepository).existsByTitleAndAuthorAndPublisher(bookCreationDTO.getTitle(),
+                bookCreationDTO.getAuthor(),
                 bookCreationDTO.getPublisher());
-        verify(bookRepository).findById(any(Long.class));
+        verify(memberRepository).findById(anyLong());
         verify(bookCreationMapper).toEntity(bookCreationDTO);
         verify(bookRepository).save(any(Book.class));
         verify(bookMapper).toDto(book);
@@ -107,157 +87,109 @@ class BookServiceTest {
 
     @Test
     void getAllBooks() {
-        Book book1 =new Book(
-                1L,
-                "title",
-                "author",
-                "publisher",
-                2023,
-                10,
-                20
-        );
-        Book book2 =new Book(
-                1L,
-                "title",
-                "author",
-                "publisher",
-                2023,
-                10,
-                20
-        );
-        BookDTO bookDTO1 = new BookDTO(
-                "title",
-                "author",
-                "publisher",
-                2023,
-                "genre",
-                "1234567890123L",
-                10
-        );
-        BookDTO bookDTO2 = new BookDTO(
-                "title",
-                "author",
-                "publisher",
-                2023,
-                "genre",
-                "a simple book",
-                10
-        );
+        Book book1 = bookBuilder.build();
+
+        Book book2 = bookBuilder.withTitle("Snowfall").withAuthor("Jerome")
+                .withId(2L).withPublisher("Mapped").build();
+
+        BookDTO bookDTO1 = bookDTOBuilder.build();
+        BookDTO bookDTO2 = bookDTOBuilder.withTitle("Snowfall").withAuthor("Jerome")
+                .withId(2L).withPublisher("Mapped").build();
 
         when(bookRepository.findAll()).thenReturn(List.of(book1, book2));
-        when(bookMapper.toDto(List.of(book1, book2)))
-                .thenReturn(List.of(bookDTO1, bookDTO2));
+        when(bookMapper.toDto(book1)).thenReturn(bookDTO1);
+        when(bookMapper.toDto(book2)).thenReturn(bookDTO2);
 
         List<BookDTO> result = bookService.getAllBooks();
 
-        assertEquals(2, result.size());
+        verify(bookRepository, times(1)).findAll();
+        assertThat(result).hasSize(2).contains(bookDTO1, bookDTO2);
+        assertEquals(bookDTO1.getTitle(), result.getFirst().getTitle());
+        assertEquals(bookDTO1.getAuthor(), result.getFirst().getAuthor());
+        assertEquals(bookDTO1.getDescription(), result.getFirst().getDescription());
+        assertEquals(bookDTO1.getGenre(), result.getFirst().getGenre());
+        assertEquals(bookDTO1.getPublisher(), result.getFirst().getPublisher());
+        assertEquals(bookDTO1.getAvailableCopies(), result.getFirst().getAvailableCopies());
+        assertEquals(bookDTO1.getYearPublished(), result.getFirst().getYearPublished());
 
-        verify(bookRepository).findAll();
-        verify(bookMapper).toDto(List.of(book1, book2));
+        assertEquals(bookDTO2.getTitle(), result.get(1).getTitle());
+        assertEquals(bookDTO2.getAuthor(), result.get(1).getAuthor());
+        assertEquals(bookDTO2.getDescription(), result.get(1).getDescription());
+        assertEquals(bookDTO2.getGenre(), result.get(1).getGenre());
+        assertEquals(bookDTO2.getPublisher(), result.get(1).getPublisher());
+        assertEquals(bookDTO2.getAvailableCopies(), result.get(1).getAvailableCopies());
+        assertEquals(bookDTO2.getYearPublished(), result.get(1).getYearPublished());
     }
 
     @Test
     void getBookById() {
-        long memberId = 2L;
-        Member member = new Member(
-                memberId,
-                "Roy",
-                "roy@email.com",
-                "ndokoti",
-                LocalDateTime.now().minusDays(5),
-                null,
-                Role.LIBRARIAN
-        );
-        Book book =new Book(
-                1L,
-                "title",
-                "author",
-                "publisher",
-                2023,
-                10,
-                20
-        );
-        BookDTO bookDTO = new BookDTO(
-                "title",
-                "author",
-                "publisher",
-                2023,
-                "genre",
-                "a simple book",
-                10
-        );
-        when(memberRepository.findById(memberId)).thenReturn(Optional.of(member));
+        Member member = memberBuilder.withRole(Role.LIBRARIAN).build();
+        Book book = bookBuilder.build();
+        BookDTO bookDTO = bookDTOBuilder.build();
+
+        when(memberRepository.findById(anyLong())).thenReturn(Optional.of(member));
         when(bookRepository.findById(any(Long.class))).thenReturn(Optional.of(book));
-        when(bookMapper.toDto(book)).thenReturn(bookDTO);
+        when(bookMapper.toDto(any(Book.class))).thenReturn(bookDTO);
 
-        BookDTO result = bookService.getBookById(1L, memberId);
+        BookDTO result = bookService.getBookById(1L, 1L);
 
+        assertEquals(bookDTO.getTitle(), result.getTitle());
+        assertEquals(bookDTO.getAuthor(), result.getAuthor());
+        assertEquals(bookDTO.getDescription(), result.getDescription());
+        assertEquals(bookDTO.getGenre(), result.getGenre());
+        assertEquals(bookDTO.getPublisher(), result.getPublisher());
+        assertEquals(bookDTO.getAvailableCopies(), result.getAvailableCopies());
         assertEquals(bookDTO.getYearPublished(), result.getYearPublished());
+        assertThat(result).isEqualTo(bookDTO);
 
-        verify(memberRepository).findById(memberId);
+        verify(memberRepository).findById(anyLong());
         verify(bookRepository).findById(any(Long.class));
-        verify(bookMapper).toDto(book);
+        verify(bookMapper).toDto(any(Book.class));
 
     }
 
     @Test
     void getBooksByTitle() {
-        Book book =new Book(
-                1L,
-                "title",
-                "author",
-                "publisher",
-                2023,
-                10,
-                20
-        );
-        BookDTO bookDTO = new BookDTO(
-                "title",
-                "author",
-                "publisher",
-                2023,
-                "genre",
-                "a simple book",
-                10
-        );
-        when(bookRepository.findByTitle("title")).thenReturn(List.of(book));
+        Book book = bookBuilder.build();
+        BookDTO bookDTO = bookDTOBuilder.build();
+
+        when(bookRepository.findByTitle(anyString())).thenReturn(List.of(book));
         when(bookMapper.toDto(List.of(book))).thenReturn(List.of(bookDTO));
 
-        List<BookDTO> result = bookService.getBooksByTitle("title");
+        List<BookDTO> result = bookService.getBooksByTitle("House");
 
-        assertEquals(bookDTO.getTitle(), result.get(0).getTitle());
+        assertEquals(bookDTO.getTitle(), result.getFirst().getTitle());
+        assertEquals(bookDTO.getAuthor(), result.getFirst().getAuthor());
+        assertEquals(bookDTO.getDescription(), result.getFirst().getDescription());
+        assertEquals(bookDTO.getGenre(), result.getFirst().getGenre());
+        assertEquals(bookDTO.getPublisher(), result.getFirst().getPublisher());
+        assertEquals(bookDTO.getAvailableCopies(), result.getFirst().getAvailableCopies());
+        assertEquals(bookDTO.getYearPublished(), result.getFirst().getYearPublished());
+        assertThat(result).hasSize(1).contains(bookDTO);
 
 
-        verify(bookRepository).findByTitle("title");
+        verify(bookRepository).findByTitle(anyString());
         verify(bookMapper).toDto(List.of(book));
     }
 
     @Test
     void getBooksByAuthor() {
-        Book book =new Book(
-                1L,
-                "title",
-                "author",
-                "publisher",
-                2023,
-                10,
-                20
-        );
-        BookDTO bookDTO = new BookDTO(
-                "title",
-                "author",
-                "publisher",
-                2023,
-                "genre",
-                "a simple book",
-                10
-        );
-        when(bookRepository.findByAuthor("author")).thenReturn(List.of(book));
+        Book book = bookBuilder.build();
+        BookDTO bookDTO = bookDTOBuilder.build();
+
+        when(bookRepository.findByAuthor(anyString())).thenReturn(List.of(book));
         when(bookMapper.toDto(List.of(book))).thenReturn(List.of(bookDTO));
 
         List<BookDTO> result = bookService.getBooksByAuthor("author");
 
-        assertEquals(bookDTO.getAuthor(), result.get(0).getAuthor());
+        assertThat(result).hasSize(1).contains(bookDTO);
+        assertEquals(bookDTO.getTitle(), result.getFirst().getTitle());
+        assertEquals(bookDTO.getAuthor(), result.getFirst().getAuthor());
+        assertEquals(bookDTO.getDescription(), result.getFirst().getDescription());
+        assertEquals(bookDTO.getGenre(), result.getFirst().getGenre());
+        assertEquals(bookDTO.getPublisher(), result.getFirst().getPublisher());
+        assertEquals(bookDTO.getAvailableCopies(), result.getFirst().getAvailableCopies());
+        assertEquals(bookDTO.getYearPublished(), result.getFirst().getYearPublished());
 
         verify(bookRepository).findByAuthor("author");
         verify(bookMapper).toDto(List.of(book));
@@ -265,30 +197,22 @@ class BookServiceTest {
 
     @Test
     void getBooksByGenre() {
-        Book book =new Book(
-                1L,
-                "title",
-                "author",
-                "publisher",
-                2023,
-                10,
-                20
-        );
-        BookDTO bookDTO = new BookDTO(
-                "title",
-                "author",
-                "publisher",
-                2023,
-                "genre",
-                "a simple book",
-                10
-        );
-        when(bookRepository.findByGenre("genre")).thenReturn(List.of(book));
+        Book book = bookBuilder.build();
+        BookDTO bookDTO = bookDTOBuilder.build();
+
+        when(bookRepository.findByGenre(anyString())).thenReturn(List.of(book));
         when(bookMapper.toDto(List.of(book))).thenReturn(List.of(bookDTO));
 
         List<BookDTO> result = bookService.getBooksByGenre("genre");
 
-        assertEquals(bookDTO.getGenre(), result.get(0).getGenre());
+        assertThat(result).hasSize(1).contains(bookDTO);
+        assertEquals(bookDTO.getTitle(), result.getFirst().getTitle());
+        assertEquals(bookDTO.getAuthor(), result.getFirst().getAuthor());
+        assertEquals(bookDTO.getDescription(), result.getFirst().getDescription());
+        assertEquals(bookDTO.getGenre(), result.getFirst().getGenre());
+        assertEquals(bookDTO.getPublisher(), result.getFirst().getPublisher());
+        assertEquals(bookDTO.getAvailableCopies(), result.getFirst().getAvailableCopies());
+        assertEquals(bookDTO.getYearPublished(), result.getFirst().getYearPublished());
 
         verify(bookRepository).findByGenre("genre");
         verify(bookMapper).toDto(List.of(book));
@@ -296,30 +220,22 @@ class BookServiceTest {
 
     @Test
     void getBooksByPublisher() {
-        Book book =new Book(
-                1L,
-                "title",
-                "author",
-                "publisher",
-                2023,
-                10,
-                20
-        );
-        BookDTO bookDTO = new BookDTO(
-                "title",
-                "author",
-                "publisher",
-                2023,
-                "genre",
-                "a simple book",
-                10
-        );
-        when(bookRepository.findByPublisher("publisher")).thenReturn(List.of(book));
+        Book book = bookBuilder.build();
+        BookDTO bookDTO = bookDTOBuilder.build();
+
+        when(bookRepository.findByPublisher(anyString())).thenReturn(List.of(book));
         when(bookMapper.toDto(List.of(book))).thenReturn(List.of(bookDTO));
 
         List<BookDTO> result = bookService.getBooksByPublisher("publisher");
 
-        assertEquals(bookDTO.getPublisher(), result.get(0).getPublisher());
+        assertThat(result).hasSize(1).contains(bookDTO);
+        assertEquals(bookDTO.getTitle(), result.getFirst().getTitle());
+        assertEquals(bookDTO.getAuthor(), result.getFirst().getAuthor());
+        assertEquals(bookDTO.getDescription(), result.getFirst().getDescription());
+        assertEquals(bookDTO.getGenre(), result.getFirst().getGenre());
+        assertEquals(bookDTO.getPublisher(), result.getFirst().getPublisher());
+        assertEquals(bookDTO.getAvailableCopies(), result.getFirst().getAvailableCopies());
+        assertEquals(bookDTO.getYearPublished(), result.getFirst().getYearPublished());
 
         verify(bookRepository).findByPublisher("publisher");
         verify(bookMapper).toDto(List.of(book));
@@ -327,74 +243,42 @@ class BookServiceTest {
 
     @Test
     void updateBook() {
-        BookCreationDTO bookCreationDTO = new BookCreationDTO(
-                "title",
-                "author",
-                "publisher",
-                2023,
-                "genre",
-                "1234567890123L",
-                10,
-                20
-        );
+        BookCreationDTO bookCreationDTO = bookCreationBuilder.withTitle("Snowfall")
+                .withAuthor("Jerome").withPublisher("Mapped").build();
 
-        long memberId = 1L;
-        Member member = new Member(
-                memberId,
-                "john charle",
-                "john@email.com",
-                "logbaba",
-                LocalDateTime.now().minusDays(9),
-                LocalDateTime.now(),
-                Role.LIBRARIAN
-        );
+        Member member = memberBuilder.withRole(Role.LIBRARIAN).build();
 
-        Book book =new Book(
-                1L,
-                "title",
-                "author",
-                "publisher",
-                2023,
-                10,
-                20
-        );
+        Book updatedBook = bookBuilder.withTitle("Snowfall").withAuthor("Jerome")
+                .withId(2L).withPublisher("Mapped").build();
 
-        Book updatedBook =new Book(
-                1L,
-                "josh",
-                "author",
-                "publisher",
-                2023,
-                10,
-                20
-        );
+        BookDTO bookDTO = bookDTOBuilder.withTitle("Snowfall").withAuthor("Jerome")
+                .withId(2L).withPublisher("Mapped").build();
 
-        BookDTO bookDTO = new BookDTO(
-                "josh",
-                "author",
-                "publisher",
-                2023,
-                "genre",
-                "a simple book",
-                10
-        );
-
-        when(memberRepository.findById(memberId)).thenReturn(Optional.of(member));
-        when(bookRepository.existsById(any(Long.class))).thenReturn(true);
-        when(bookCreationMapper.toEntity(bookCreationDTO)).thenReturn(book);
+        when(memberRepository.findById(anyLong())).thenReturn(Optional.of(member));
+        when(bookRepository.existsById(anyLong())).thenReturn(true);
+        when(bookCreationMapper.toEntity(bookCreationDTO)).thenReturn(updatedBook);
         when(bookRepository.save(any(Book.class))).thenReturn(updatedBook);
+        when(bookRepository.findAll()).thenReturn(List.of(updatedBook));
         when(bookMapper.toDto(updatedBook)).thenReturn(bookDTO);
 
-        BookDTO result = bookService.updateBook(1L,bookCreationDTO, memberId);
+        bookService.updateBook(1L,bookCreationDTO, 1L);
+        List<BookDTO> result = bookService.getAllBooks();
 
-        assertEquals(result.getTitle(), bookDTO.getTitle());
-        assertEquals(result.getAuthor(), bookDTO.getAuthor());
-        assertEquals(result.getDescription(), bookDTO.getDescription());
+        assertThat(result).hasSize(1).contains(bookDTO);
+        assertEquals(bookDTO.getTitle(), result.getFirst().getTitle());
+        assertEquals(bookDTO.getAuthor(), result.getFirst().getAuthor());
+        assertEquals(bookDTO.getDescription(), result.getFirst().getDescription());
+        assertEquals(bookDTO.getGenre(), result.getFirst().getGenre());
+        assertEquals(bookDTO.getPublisher(), result.getFirst().getPublisher());
+        assertEquals(bookDTO.getAvailableCopies(), result.getFirst().getAvailableCopies());
+        assertEquals(bookDTO.getYearPublished(), result.getFirst().getYearPublished());
 
-        verify(memberRepository).findById(memberId);
-        verify(bookRepository).existsById(any(Long.class));
+
+        verify(memberRepository).findById(anyLong());
+        verify(bookRepository).existsById(anyLong());
         verify(bookCreationMapper).toEntity(bookCreationDTO);
         verify(bookRepository).save(any(Book.class));
+        verify(bookRepository).findAll();
         verify(bookMapper).toDto(updatedBook);
 
 
@@ -402,22 +286,13 @@ class BookServiceTest {
 
     @Test
     void deleteBook() {
-        long id = 1L;
-        long memberId = 2L;
-        Member member = new Member(
-                memberId,
-                "Roy",
-                "roy@email.com",
-                "ndokoti",
-                LocalDateTime.now().minusDays(5),
-                null,
-                Role.LIBRARIAN
-        );
 
-        when(memberRepository.findById(memberId)).thenReturn(Optional.of(member));
+        Member member = memberBuilder.withRole(Role.LIBRARIAN).build();
+
+        when(memberRepository.findById(anyLong())).thenReturn(Optional.of(member));
         doNothing().when(bookRepository).deleteById(any(Long.class));
-        bookService.deleteBook(id,memberId);
+        bookService.deleteBook(1L,2L);
 
-        verify(bookRepository).deleteById(id);
+        verify(bookRepository).deleteById(any(Long.class));
     }
 }
